@@ -1,3 +1,7 @@
+2002-01-21  Richard Hestilow  <hestilow@ximian.com>
+
+	* main.c: Use nautilus as the shell if it is already running.
+
 2002-01-17  Jakub Steiner <jimmac@ximian.com>
 
 	* control-center.png: fix the antialiasing
